# misc

DGtal-CGAL/: 2d-patterns-v2.cpp  2d-triangulation-color.cpp  2d-triangulation-f.cpp  2d-triangulation.cpp  3d-patterns-v2.cpp  3d-patterns.cpp  3d-triangulation-2.cpp  3d-triangulation-3.cpp  3d-triangulation.cpp  Auxiliary.h  BasicVectoImageExporter.h  BezierCurve.h  BezierTriangle3.h  BreadthFirstVisitorWithParent.h  BreadthFirstVisitorWithParent.ih  CMakeLists.txt  CairoViewer.h  FindCairo.cmake  FourierPoisson.h  ImageConnecter.h  ImageTVRegularization.h  ImageTriangulation.h  RelativeConvexHull.h  RelativeConvexHull.ih  SimplicialStrip3D.h  SimplicialStrip3D.ih  Triangulation2DHelper.h  Triangulation2DHelper.ih  Triangulation3DHelper.h  Triangulation3DHelper.ih  UmbrellaPart2D.h  UmbrellaPart2D.ih  bezier-triangle.sage  color-transfer.cpp  curve.py  poisson-editing.cpp  simpleExample.cpp  testBezierTriangle2.cpp  tv-image.cpp  tv-triangulation-color.cpp  (+2 more)
DGtal-CGAL/ResVrac/: cmd.md  reconsMarioYoshiOpti.eps
DGtal-CGAL/data/: README  accflower+ellipse-r-1.fc  accflower-0_125.fc  accflower-0_125.pts  accflower-0_25.fc  accflower-0_25.pts  accflower-0_5.fc  accflower-0_5.pts  accflower-1.fc  accflower-1.pts  almost-plane-4x3.pts  barbara-cropped.ppm  barbara.ppm  batiment-compact.ppm  batiment-icade.ppm  bike2-cropped.pgm  bike2-noise-cropped.pgm  bike2-noise.pgm  bike2-noise.ppm  bike2-otsu.pgm  bike2.pgm  bike2.ppm  binary-shape.xcf  bnp-batiment-2.ppm  bnp-batiment.ppm  bowser-1.ppm  carpates.ppm  carre-15.pts  chest.ppm  circle-10.pts  cure-jungle.ppm  cure-newkraken.ppm  cure-trump.ppm  curve-2-10.pts  curve-2-100.pts  disk-d48-aa.pgm  disk-d48.pgm  ellipse-1.fc  ellipse-r-1.fc  ellipses.pts  (+34 more)
DGtal-CGAL/data-3d/: almost-plane-2.pts  almost-plane-2x1.pts  almost-plane-2x2.pts  almost-plane-3x2.pts  almost-plane-3x3x2.pts  almost-plane-4x3x2.pts  circle-50.pts  curve-2-50.pts  curve-trigo-10.pts  curve-trigo-100.pts  curve-trigo-1000.pts  helix-30.pts  helix-50.pts  plan_28_76_111__big  plan_28_76_111__small  plan_38_86_121__big  plan_38_86_121__small  plan_5_7_11__big  plan_5_7_11__small  plane-2x1.pts  prism.pts
DGtal-CGAL/pixelart/: alcopopstar.pgm  andyoaks-sarah.ppm  axe-battler-1.ppm  badassbill.ppm  buloght-winter.ppm  bunnystick-firenymph.ppm  cels-island.ppm  control-panel.ppm  cure-incommunicado.ppm  cure-oz-2.ppm  cure-oz.ppm  cure-pocadb.ppm  cure-stachio.ppm  donkey-cong-country-2-bramble-blast.ppm  donkey-cong-country-2-slime-climb.ppm  donkey-cong-country-2-sprites.ppm  fonts.ppm  fool-adam-eve.ppm  help.ppm  jinn-1bitgirl-sigle.ppm  jinn-1bitgirl.pgm  jjnaas-slayerdude.ppm  koopa-1.ppm  mario-1.ppm  mario-yoshi-2.ppm  mashpotato-alkonost.ppm  peach-1.ppm  puzza-alucard.ppm  randi-1.ppm  randi-2.ppm  reed-bwcaracters.pgm  rephisto-deadking.ppm  ryan-rdv.ppm  salamando-1.ppm  sooba-portrait.ppm  sprites-1.ppm  toad.ppm  toy-image-1.pgm  yoshi-1.ppm  yoshi-2.ppm
DGtal-CGAL/transfer/: cervin-montagne-n40.ppm  cervin.ppm  desert-fjord-n40.ppm  desert.ppm  feuille-orange-n1.ppm  feuille-orange-n40.ppm  feuille.ppm  fjord.ppm  horseshoe-fjord-n40.ppm  horseshoe.ppm  imA2.ppm  imB-fjord-n40.ppm  imB2.ppm  monarch-papillonx-n40.ppm  monarch-tulips-n40.ppm  montagne-cervin-n40.ppm  montagne.ppm  orange-feuille-n1.ppm  orange-feuille-n40.ppm  orange.ppm  papillonx-monarch-n40.ppm  saxe-carpates-n40.ppm  saxe.ppm  tulips-monarch-n40.ppm
Farey/: CMakeLists.txt  farey.cpp
MipMap/: hierarchy.c  mipmapdisk.cpp
